Edited wiki page May_June_July through web user interface.

--- a/wiki/May_June_July.wiki
+++ b/wiki/May_June_July.wiki
@@ -1,8 +1,11 @@
 #summary May/June Batch.
 
 = Introduction =
+*Update 7/11* Approved test boards via photo, approved the whole batch for shipping. The long wait is just about over. Thanks everyone for hanging in there...
 
 *Update 7/10* Things are finally moving, after every possible delay you could think of gold phoenix has commuted to shipping the first 10 tomorrow via fedex and the second 90 once I approve the test batch. I guess they were a bit off when they quoted 19 days (5 for PCBs production and 14 for assembly) way back on 4/30
+
+*Update 7/1 parts delayed in customs... what else...?
 
 *Update 6/25* Gold Phoenix will ship boards this week, they were delaying production due to a back ordered part. I have plenty so I will add the part on my end. 
 
