--- a/wiki/May_June_July.wiki
+++ b/wiki/May_June_July.wiki
@@ -60,7 +60,7 @@ Payment via paypal to chris1howell83@gmail.com
 || 13 || beazley || Built || RTC Built - EV Sim || Paid || ||
 || 14 || fredouille INT || Built || RTC Built - EVsim || Paid || ||
 || 15 || cyril INT || Kit || RTC - EVSim || Paid || ||
-|| 16 || guy.german - INT || Built || LCD - EV Sim || || ||
+|| 16 || guy.german - INT || Built || LCD - EV Sim || Paid || ||
 || 18 || j.e.best || Built || RTC || Paid || ||
 || 19 || Sapounas - INT || Built || RTC - EVSIM || Paid || ||
 || 20 || AllieCatSD || Kit || RTC || Paid || ||
@@ -80,3 +80,5 @@ Payment via paypal to chris1howell83@gmail.com
 || 34 || awong22828 || built || RTC || Paid || ||
 || 35 || Olivier INT || Built || RTC built || || ||
 || 36 || emf-power || kit || RTC kit || Paid || ||
+|| 37 || thilo.graupner INT || kit || RTC || Paid ||
+|| 38 || lemans4 INT || kit || RTC || paid ||
