--- a/wiki/OpenEVSEv42partslist.wiki
+++ b/wiki/OpenEVSEv42partslist.wiki
@@ -41,7 +41,7 @@ http://farm9.staticflickr.com/8370/8437977311_28677cea78_n.jpg
 || Any || Any || Cap (ceramic) || 22pf || C1,C2|| 2|| $0.44|| http://www.digikey.com/product-detail/en/SR151A180JAR ||
 || Any || Any || Cap (ceramic) || 0.1uf || C3,4,8,10-15,18,20,21,23-25|| 15 || $0.20|| http://www.digikey.com/product-detail/en/C320C104M5U5TA || 
 || Any || Any || Cap (ceramic) || 0.33uf || C22|| 1|| $0.46|| http://www.digikey.com/product-detail/en/SR205E334MAR/478-5733-ND/2136293||
-|| TDK Corp.|| FK18X7R1E105K|| Cap (electrolytic) || 1.0uf 25V|| C5,C6,C7|| 3|| $0.43|| http://www.digikey.com/product-detail/en/FK18X7R1E105K/445-8422-ND/2815352 ||
+|| Panasonic || EEA-GA1H1R0|| Cap (electrolytic) || 1.0uf 50V|| C5,C6,C7|| 3|| $0.43|| http://www.digikey.com/product-detail/en/EEA-GA1H1R0/P14504-ND/2504593 ||
 || TDK Corp.|| FK14X5R1E225K|| Cap (ceramic) || 2.2uf 25V|| C19,C26|| 2|| $0.46|| http://www.digikey.com/product-detail/en/FK14X5R1E225K/445-8298-ND/2815228 || 
 || Panasonic || EEA-FC1E100 || Cap (electrolitic) || 10uf 25V|| C9 || 1|| $0.30|| http://search.digikey.com/us/en/products/EEA-FC1E100/P11212-ND/356116 || 
 || Vishay Sprague|| 199D336X9016D1V1E3|| Cap (tantalum)|| 33uf 16V|| C16|| 1|| $2.07|| http://www.digikey.com/product-detail/en/199D336X9016D1V1E3 || 
