Edited wiki page May_June_July through web user interface.

--- a/wiki/May_June_July.wiki
+++ b/wiki/May_June_July.wiki
@@ -1,6 +1,7 @@
 #summary May/June Batch.
 
 = Introduction =
+*Update 7/20* Remaining 90 will ship Tuesday 7/23 and should arrive Thursday/Friday...
 
 *Update 7/19* First 10 came in and the first 10 shipped out...I was hoping to get all 100 at once. I'll update when I get tracking info the the other 90.
 
