Edited wiki page Hydra through web user interface.

--- a/wiki/Hydra.wiki
+++ b/wiki/Hydra.wiki
@@ -52,3 +52,39 @@ There are 4 things on the board that require some attention:
   * The four zener diodes listed in the schematic are wrong. Eagle didn't come with a 5 volt zener diode, so I picked a close one. The diodes in the BOM are correct.
   * R8 is a 2.7k resistor that runs between proximity and ground. Some (most? all?) J1772 inlets come with a 2.7k resistor installed between proximity and ground. If yours does, then do not install R8.
   * Rx and Ry are burden resistors for the CT coils. These need to be chosen based on the CT you're going to use and the maximum outlet current rating for your Hydra. For my prototype, the CTs I've selected have a Te of 1018 and the design current for the Hydra will be 30A. For that configuration, a 56 ohm resistor is appropriate. You'll also find a #define in the source code for the Hydra that you will need to adjust in concert with this. Customizing the burden resistor allows you to maximize the accuracy of the ammeter readings for each car.
+
+The software is hosted on GitHub at https://github.com/nsayer/hydra
+
+= Wiring =
+
+The two car relays are DPST relays with 12vdc coils rated for whatever your outlet current is.
+
+In some (most?) cases, the J1772 inlet you get will be higher rated than your plugs and cables. The software is capable of limiting the inlet current separately, but in order to take advantage of this, you must insure that your relays are wired in a "star" pattern rather than daisy-chained. In a daisy-chain, the full current of the entire system will flow through the first component's cables, limiting the design current to that capacity. If you connect each relay's supply leads together to the inlet supply at the same point, then the inlet current is allowed to be higher.
+
+For each relay, designate a "line" side and a "load" side. On the line side, run a wire (for 30A, use 10 gauge) from each terminal of the relay to one of the two inlet hot cables. I used (large) wire nuts to connect the three wires for each phase together.
+
+You also need to get "line" power into the power supply. It can use 22 gauge wire. You can either add those wires into the wire nut forest or you can piggyback one of the quick connects on one of the relays.
+
+On the load side of each relay, connect up the hot wires of one of the J1772 cables. Run one of the hot lines through a CT coil before connecting it to the relay. Unlike OpenEVSE, you run only one of the lines through the coil, not both. It doesn't matter which one you pick.
+
+Be sure that you pair up the relay coil wires with the CT coil wires. It doesn't matter which pair is A or B (other than car "A" being on the left side of the LCD display), but be sure that the lines for each relay coil match the corresponding CT! You don't want to measure the wrong car's current draw. Be sure also to connect the pilot leads up to the correct pilot outputs (A or B). Again, don't want to mix up the two cars.
+
+The proximity wires, if present, from the car plug/cable sets is not used.
+
+Don't forget to connect all of the grounds to a ground bus:
+
+  * The inlet ground
+  * Each plug/cable ground
+  * The inlet ground connection from the board
+  * the output pilot ground connection from the board
+  * (if applicable) any ground from the power supply
+
+If desired, connect a SPST switch up to the POWER_SW terminals on the board. If you don't want to do this, then you must place a jumper across them instead. 22 gauge wire is sufficient in either case. The power switch doesn't actually carry any appreciable current on it.
+
+Lastly, connect the LCD up via the I2C cable. Unlike OpenEVSE, there is no support for the buttons.
+
+= Future plans =
+
+First, I am going to complete the prototype and debug it. Once the design is field-proven, I will either get OSHPark to add the board to their single-unit-quantity store or I will sell boards for $20 each plus shipping (that's about my cost).
+
+The circuit board BOM from DigiKey is around $45 + tax and shipping. The chassis BOM is around $85 + tax and shipping. A J1772 inlet is $120 from Modular EV Power and J1772 cables are $150 each from Leviton. A box and two cable glands are around $50 from Polycase. So just in parts alone, a Hydra costs close to $700.
