--- a/wiki/sidebar.wiki
+++ b/wiki/sidebar.wiki
@@ -16,6 +16,7 @@
     * [EVSE_by_scutzi128 OpenEVSE 30A by Jacob Scutzlas]
     * [EVSE_by_rbeebe OpenEVSE 30A by Rick Beebe]
     * [YetAnotherOpenEVSE Portable EVSE by nsayer]
+    * [Hydra The J1772 Hydra by nsayer]
   * *SAE J1772 Standard*
     * [J1772Basics Basics of J1772] 
     * [J1772CableSources Sources for J1772 cables]
