Edited wiki page Hydra through web user interface.

--- a/wiki/Hydra.wiki
+++ b/wiki/Hydra.wiki
@@ -49,15 +49,17 @@ The board has the following interface points:
   * 1 6 pin ISP socket for programming
 
 There are 4 things on the board that require some attention:
-  * The four zener diodes listed in the schematic are wrong. Eagle didn't come with a 5 volt zener diode, so I picked a close one. The diodes in the BOM are correct.
+  * The four zener diodes listed in the schematic are wrong. Eagle didn't come with a 2.4 volt zener diode, so I picked a close one. The diodes in the BOM are correct.
   * R8 is a 2.7k resistor that runs between proximity and ground. Some (most? all?) J1772 inlets come with a 2.7k resistor installed between proximity and ground. If yours does, then do not install R8.
   * R14 and R17 are burden resistors for the CT coils. These need to be chosen based on the CT you're going to use and the maximum outlet current rating for your Hydra. For my prototype, the CTs I've selected have a Te of 1018 and the design current for the Hydra will be 30A. For that configuration, a 56 ohm resistor is appropriate. You'll also find a #define in the source code for the Hydra that you will need to adjust in concert with this. Customizing the burden resistor allows you to maximize the accuracy of the ammeter readings for each car.
 
 The software is hosted on GitHub at https://github.com/nsayer/hydra
 
+You program the controller the same way as OpenEVSE boards. You'll need an ISP programmer. Be sure to set the fuses first as described [AVRDUDE here]
+
 = Wiring =
 
-The two car relays are DPST relays with 12vdc coils rated for whatever your outlet current is.
+The two car relays are DPST relays with 12vdc coils rated for whatever your outlet current is. They're the same kind as used for OpenEVSE.
 
 In some (most?) cases, the J1772 inlet you get will be higher rated than your plugs and cables. The software is capable of limiting the inlet current separately, but in order to take advantage of this, you must insure that your relays are wired in a "star" pattern rather than daisy-chained. In a daisy-chain, the full current of the entire system will flow through the first component's cables, limiting the design current to that capacity. If you connect each relay's supply leads together to the inlet supply at the same point, then the inlet current is allowed to be higher.
 
