--- a/wiki/May_June_July.wiki
+++ b/wiki/May_June_July.wiki
@@ -1,6 +1,9 @@
 #summary May/June Batch.
 
 = Introduction =
+
+*Update 7/25* Remaining 90 are at the sort facility in Burbank they are expected to arrive tomorrow 7/26.
+
 *Update 7/20* Remaining 90 will ship Tuesday 7/23 and should arrive Thursday/Friday...
 
 *Update 7/19* First 10 came in and the first 10 shipped out...I was hoping to get all 100 at once. I'll update when I get tracking info the the other 90.
