Edited wiki page May_June_July through web user interface.

--- a/wiki/May_June_July.wiki
+++ b/wiki/May_June_July.wiki
@@ -1,6 +1,7 @@
 #summary May/June Batch.
 
 = Introduction =
+*Update 7/26* They made it... I will kit them up and build as fast as I can...
 
 *Update 7/25* Remaining 90 are at the sort facility in Burbank they are expected to arrive tomorrow 7/26.
 
