--- a/wiki/May_June_July.wiki
+++ b/wiki/May_June_July.wiki
@@ -51,7 +51,7 @@ Payment via paypal to chris1howell83@gmail.com
 || Ship OpenEVSE "Built and Tested"|| ||
 
 || Slot || Name || OpenEVSE Plus || Extras || Payment Recieved || Shipped ||
-||   || markdinh || Built || RTC EV Sim || Paid || Workshop ||
+||   || markdinh || Built || RTC EV Sim || Paid || Shipped 7/29 ||
 ||   || Ryan ~2 || Kit || RGB LCD || Paid || Shipped 7/19 ||
 ||   || bitsource || Kit || LCD board only || paid || Shipped 7/19 ||
 || 1 || bug-ar || Built || RGB LCD Built - Int Ship || Paid ||  ||
@@ -61,18 +61,18 @@ Payment via paypal to chris1howell83@gmail.com
 || 5 || bpifer || Kit || LCD Kit || Paid || Shipped 7/19 ||
 || 6 || kris.stew || Kit || RTC || Paid || Shipped 7/29 || 
 || 7 || noelingle || Kit || LCD Kit || Paid || Shipped 7/29 ||
-|| 8 || b.otterson || Kit || RTC Kit EV Sim || Paid || ||
+|| 8 || b.otterson || Kit || RTC Kit EV Sim || Paid || Shipped 7/29 ||
 || 9 || polders - INT || kit || RTC kit - EV Sim || Paid || Shipped 7/19 ||
 || 10 || jimdarnauer || Built || LCD Built - EV Sim || Paid || ||
 || 11 || mictronics - INT || kit || RTC Built || Paid || Shipped 7/19||
 || 12 || eos.it INT || Kit || RTC Kit x 2 || Paid || Shipped 7/19 ||
 || 13 || beazley || Built || RTC Built - EV Sim || Paid || ||
 || 14 || fredouille INT || Built || RTC Built - EVsim || Paid || ||
-|| 15 || cyril INT || Kit || RTC - EVSim || Paid || ||
+|| 15 || cyril INT || Kit || RTC - EVSim || Paid || Shipped 7/29 ||
 || 16 || guy.german - INT || Built || LCD - EV Sim || Paid || ||
 || 18 || j.e.best || Built || RTC || Paid || ||
 || 19 || Sapounas - INT || Built || RTC - EVSIM || Paid || ||
-|| 20 || AllieCatSD || Kit || RTC || Paid || ||
+|| 20 || AllieCatSD || Kit || RTC || Paid || Shipped 7/29 ||
 || 21 || gnb || Kit || RTC || Paid || ||
 || 22 || Jason || Built || RTC || Paid || ||
 || 23 || amb INT || Kit || RTC - EVSIM ||  Paid || ||
