--- a/wiki/May_June_July.wiki
+++ b/wiki/May_June_July.wiki
@@ -54,7 +54,7 @@ Payment via paypal to chris1howell83@gmail.com
 ||   || markdinh || Built || RTC EV Sim || Paid || Shipped 7/29 ||
 ||   || Ryan ~2 || Kit || RGB LCD || Paid || Shipped 7/19 ||
 ||   || bitsource || Kit || LCD board only || paid || Shipped 7/19 ||
-|| 1 || bug-ar || Built || RGB LCD Built - Int Ship || Paid ||  ||
+|| 1 || bug-ar || Built || RGB LCD Built - Int Ship || Paid || Shipped 7/29 ||
 || 2 || sorphin || Kit || LCD Kit || Paid || Shipped 7/19 ||
 || 3 || andy || Built || LCD Built || Paid || Shipped 7/29 ||
 || 4 || mattgreen || Kit || RTC Kit || Paid || Shipped 7/19 ||
@@ -63,14 +63,14 @@ Payment via paypal to chris1howell83@gmail.com
 || 7 || noelingle || Kit || LCD Kit || Paid || Shipped 7/29 ||
 || 8 || b.otterson || Kit || RTC Kit EV Sim || Paid || Shipped 7/29 ||
 || 9 || polders - INT || kit || RTC kit - EV Sim || Paid || Shipped 7/19 ||
-|| 10 || jimdarnauer || Built || LCD Built - EV Sim || Paid || ||
+|| 10 || jimdarnauer || Built || LCD Built - EV Sim || Paid || Shipped 7/29 ||
 || 11 || mictronics - INT || kit || RTC Built || Paid || Shipped 7/19||
 || 12 || eos.it INT || Kit || RTC Kit x 2 || Paid || Shipped 7/19 ||
-|| 13 || beazley || Built || RTC Built - EV Sim || Paid || ||
-|| 14 || fredouille INT || Built || RTC Built - EVsim || Paid || ||
+|| 13 || beazley || Built || RTC Built - EV Sim || Paid || Shipped 7/29 ||
+|| 14 || fredouille INT || Built || RTC Built - EVsim || Paid || Shipped 7/29 ||
 || 15 || cyril INT || Kit || RTC - EVSim || Paid || Shipped 7/29 ||
-|| 16 || guy.german - INT || Built || LCD - EV Sim || Paid || ||
-|| 18 || j.e.best || Built || RTC || Paid || ||
+|| 16 || guy.german - INT || Built || LCD - EV Sim || Paid || Shipped 7/29 ||
+|| 18 || j.e.best || Built || RTC || Paid || Shipped 7/29 ||
 || 19 || Sapounas - INT || Built || RTC - EVSIM || Paid || ||
 || 20 || AllieCatSD || Kit || RTC || Paid || Shipped 7/29 ||
 || 21 || gnb || Kit || RTC || Paid || Shipped 7/29 ||
