Edited wiki page May_June_July through web user interface.

--- a/wiki/May_June_July.wiki
+++ b/wiki/May_June_July.wiki
@@ -95,3 +95,4 @@ Payment via paypal to chris1howell83@gmail.com
 || 40 || maxxiss8 INT || Built || || Paid || ||
 || 41 || lemans4 INT || kit || RTC || paid ||
 || 42 || nikolay || built || RTC - EVsim || Paid || ||
+|| 43 || f4aii INT || kit || RTC || Paid || ||
