--- a/wiki/May_June_July.wiki
+++ b/wiki/May_June_July.wiki
@@ -89,10 +89,11 @@ Payment via paypal to chris1howell83@gmail.com
 || 34 || awong22828 || built || RTC || Paid || ||
 || 35 || Olivier INT || Built || RTC built || || ||
 || 36 || emf-power || kit || RTC kit || Paid || Shipped 7/29 ||
-|| 37 || thilo.graupner INT || kit || RTC || Paid ||
+|| 37 || thilo.graupner INT || kit || RTC || Paid || ||
 || 38 || maxxiss8 INT || Built || || Paid || ||
 || 39 || maxxiss8 INT || Built || || Paid || ||
 || 40 || maxxiss8 INT || Built || || Paid || ||
 || 41 || lemans4 INT || kit || RTC || paid ||
 || 42 || nikolay || built || RTC - EVsim || Paid || ||
 || 43 || f4aii INT || kit || RTC || Paid || ||
+|| 44 || markus.fuchs-winkler || kit || LCD || Paid || ||
