Edited wiki page May_June_July through web user interface.

--- a/wiki/May_June_July.wiki
+++ b/wiki/May_June_July.wiki
@@ -100,4 +100,4 @@ Payment via paypal to chris1howell83@gmail.com
 || 45 || schuck-electronics || kit || RTC || Paid || ||
 || 46 || cyrille.coudyser || built || RTC || Paid || ||
 || 47 || cyrille.coudyser || built || RTC || Paid || ||
-|| 48 || 
+|| 48 || charliebarrett || built || RTC - EVsim || Paid || ||
